# MOM6_parameter_scanner

./: .gitignore  .travis.yml  MOM6param_scan.py  README.md  setup.cfg  setup.py
.github/workflows/: ci.yml
mom6_parameter_scanner/: MOM6param_scan.py  __init__.py
mom6_parameter_scanner/resources/: README.md
mom6_parameter_scanner/resources/historical/: 18500101.logfile.000000.out  18500101.logfile.000432.out
mom6_parameter_scanner/resources/historical/18500101.extra.results/: MOM_parameter_doc.all  SIS_parameter_doc.all
mom6_parameter_scanner/resources/ocean_only_a/: 00010101.logfile.000000.out
mom6_parameter_scanner/resources/ocean_only_a/00010101.extra.results/: MOM_parameter_doc.all  SIS_parameter_doc.all
mom6_parameter_scanner/resources/ocean_only_b/: 18500101.logfile.000000.out
mom6_parameter_scanner/resources/ocean_only_b/18500101.extra.results/: MOM_parameter_doc.all  SIS_parameter_doc.all
mom6_parameter_scanner/resources/piControl/: 00010101.logfile.000000.out  00010101.logfile.001152.out
mom6_parameter_scanner/resources/piControl/00010101.extra.results/: MOM_parameter_doc.all  SIS_parameter_doc.all
scripts/: MOM6param_scan.py
test/: MOM_parameter_doc.all  Makefile  test1.json.md5sum  test2.json  test2.json.md5sum  test3.html  test3.html.md5sum  test3.json  test3.json.md5sum  test3.text  test3.text.md5sum  test_configs.py
