[metadata]
name = mom6_parameter_scanner
version = 0.0.3
description = A tool to digest and difference MOM parameter files"
url = https://github.com/adcroft/MOM6_parameter_scanner
author = Alistair Adcroft
author_email = alistair.adcroft@noaa.gov
keywords = mom mom6 ocean model parameters
classifiers =
    Development Status :: 5 - Production/Stable
    Intended Audience :: Science/Research
    Topic :: Scientific/Engineering
    License :: GPLv3
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
long_description_content_type=text/x-rst
long_description =
    **mom6_parameter_scanner** is a tool to examine and identify differences
    in simulation parameters used in the Modular Ocean Model (MOM)
    version 6.  The tool also reads parameter files from GFDL's Sea Ice
    Simulator version 2 (SIS2) and Flexible Modeling System (FMS) log
    output from CM4-class coupled models.

    More Information
    ----------------
    - Source code: `<https://github.com/adcroft/MOM6_parameter_scanner>`_

[options]
packages = find_namespace:
zip_safe = False
include_package_data = False
python_requires = >=3.7
install_requires =
    pytest
setup_requires =
    setuptools
scripts =
    scripts/MOM6param_scan.py

[options.extras_require]
test =
    pytest

[tool:pytest]
testpaths = test

[options.package_data]
mom6_parameter_scanner =
    resources/piControl
    resources/historical
    resources/ocean_only_a
    resources/ocean_only_b
